# atom

./: .editorconfig  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/avakar/: atom.h
src/: atom.natvis  concepts.h  extract_keys.h  keylist.h  literal.h  select.h  size_least.h  traits.h  utils.h
test/: test.cpp
